[project]
name = "lmp-anly"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
]
classifiers = ["Private :: Do Not Upload"]
[project.scripts]
lmp_anly = "lmp_anly.main:main"
